[GTK] Printing not working with bubblewrap sandbox enabled https://bugs.webkit.org/show_bug.cgi?id=202363

Reviewed by Michael Catanzaro.

Move printing implementation from the web process to the UI process. The
web process now writes the resulting document to a buffer that is sent
as shared memory to the UI process. The UI process sends the document to
the printer using GtkPrintJob API.

* Source/WebKit/Shared/PrintInfo.h: The constructor now receives a GtkPrintJob.
* Source/WebKit/Shared/WebErrors.h: Remove printing errors that can't
happen in the web process now.
* Source/WebKit/Shared/gtk/ArgumentCodersGtk.cpp:
(IPC::encode): Handle null print settings and page setup.
(IPC::decode): Ditto.
* Source/WebKit/Shared/gtk/PrintInfoGtk.cpp:
(WebKit::PrintInfo::PrintInfo): Create new settings populated from the GtkPrintJob.
* Source/WebKit/Shared/gtk/WebErrorsGtk.cpp:
(WebKit::printError): Deleted.
(WebKit::printerNotFoundError): Deleted.
* Source/WebKit/SourcesGTK.txt: Remove PrinterListGtk.
* Source/WebKit/UIProcess/API/gtk/WebKitPrintOperation.cpp:
(webkitPrintOperationRunDialog): Save the selected printer too.
(webkitPrintOperationFailed): Helpers to emit the failed signals for the given errors.
(webkitPrintOperationFinished): Helper to emit the finished signal and clean up the operation.
(webkitPrintOperationPrintPagesForFrame): Create a GtkPrintJob for the operation and wait until
the web process has written the document to send it to the printer.
(webkitPrintOperationRunDialogForFrame): Pass the printer to webkitPrintOperationPrintPagesForFrame() too.
(printerFromSettingsOrDefault): Helper to get the GtkPrinter for the given settings or the default printer if any.
(webkit_print_operation_print): Pass the printer to webkitPrintOperationPrintPagesForFrame() too.
(drawPagesForPrintingCompleted): Deleted.
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::drawPagesForPrinting): Remove the callback wrapper.
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/WebProcess/WebCoreSupport/WebChromeClient.cpp:
(WebKit::WebChromeClient::print): Remove the printer list hack.
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::close): disconnectFromPage() is no longer needed.
(WebKit::WebPage::beginPrinting): Use makeUnique to create the WebPrintOperationGtk.
(WebKit::WebPage::drawPagesForPrinting): Copy the shared buffer to shared memory and send the handle to the UI process.
* Source/WebKit/WebProcess/WebPage/WebPage.h:
* Source/WebKit/WebProcess/WebPage/WebPage.messages.in:
* Source/WebKit/WebProcess/WebPage/gtk/PrinterListGtk.cpp: Removed.
(WebKit::PrinterListGtk::getOrCreate): Deleted.
(WebKit::PrinterListGtk::PrinterListGtk): Deleted.
(WebKit::PrinterListGtk::~PrinterListGtk): Deleted.
(WebKit::PrinterListGtk::addPrinter): Deleted.
(WebKit::PrinterListGtk::findPrinter const): Deleted.
* Source/WebKit/WebProcess/WebPage/gtk/PrinterListGtk.h: Removed.
* Source/WebKit/WebProcess/WebPage/gtk/WebPrintOperationGtk.cpp:
(WebKit::WebPrintOperationGtk::PrintPagesData::PrintPagesData): Make PrintPagesData a private struct in WebPrintOperationGtk
to simplify everyting.
(WebKit::WebPrintOperationGtk::PrintPagesData::incrementPageSequence):
(WebKit::WebPrintOperationGtk::WebPrintOperationGtk):
(WebKit::WebPrintOperationGtk::~WebPrintOperationGtk):
(WebKit::WebPrintOperationGtk::startPrint): Create the cairo surface according to the settings to be written on a stream.
(WebKit::WebPrintOperationGtk::startPage):
(WebKit::WebPrintOperationGtk::endPage):
(WebKit::WebPrintOperationGtk::endPrint):
(WebKit::WebPrintOperationGtk::printPagesIdle):
(WebKit::WebPrintOperationGtk::printPagesIdleDone):
(WebKit::WebPrintOperationGtk::printPagesDone):
(WebKit::WebPrintOperationGtk::printDone):
(WebKit::WebPrintOperationGtk::print):
(WebKit::PrintPagesData::PrintPagesData): Deleted.
(WebKit::PrintPagesData::collatedCopiesLeft): Deleted.
(WebKit::PrintPagesData::uncollatedCopiesLeft): Deleted.
(WebKit::PrintPagesData::copiesLeft): Deleted.
(WebKit::PrintPagesData::incrementPageSequence): Deleted.
(WebKit::WebPrintOperationGtk::create): Deleted.
(WebKit::WebPrintOperationGtk::disconnectFromPage): Deleted.
* Source/WebKit/WebProcess/WebPage/gtk/WebPrintOperationGtk.h:
(WebKit::WebPrintOperationGtk::PrintPagesData::collatedCopiesLeft const):
(WebKit::WebPrintOperationGtk::PrintPagesData::uncollatedCopiesLeft const):
(WebKit::WebPrintOperationGtk::PrintPagesData::copiesLeft const):
(WebKit::WebPrintOperationGtk::printContext const): Deleted.
(WebKit::WebPrintOperationGtk::printSettings const): Deleted.
(WebKit::WebPrintOperationGtk::pageSetup const): Deleted.
(WebKit::WebPrintOperationGtk::printMode const): Deleted.
(WebKit::WebPrintOperationGtk::setNumberOfPagesToPrint): Deleted.
(WebKit::WebPrintOperationGtk::pagesToPrint const): Deleted.
(WebKit::WebPrintOperationGtk::pagePosition const): Deleted.
(WebKit::WebPrintOperationGtk::setPagePosition): Deleted.
(WebKit::WebPrintOperationGtk::pageRanges const): Deleted.
(WebKit::WebPrintOperationGtk::pageRangesCount const): Deleted.
(WebKit::WebPrintOperationGtk::numberUp const): Deleted.
(WebKit::WebPrintOperationGtk::numberUpLayout const): Deleted.
(WebKit::WebPrintOperationGtk::pageSet const): Deleted.
(WebKit::WebPrintOperationGtk::reverse const): Deleted.
(WebKit::WebPrintOperationGtk::copies const): Deleted.
(WebKit::WebPrintOperationGtk::collateCopies const): Deleted.
(WebKit::WebPrintOperationGtk::scale const): Deleted.
* Tools/TestWebKitAPI/Tests/WebKitGtk/TestPrinting.cpp:
(findPrintToFilePrinter):
(testPrintOperationPrint):
(testPrintOperationErrors):
(testPrintOperationCloseAfterPrint):
(testPrintCustomWidget):
(testPrintOperationPrintPrinter): Deleted.

Canonical link: https://commits.webkit.org/253895@main